# fastapi_vod

./: .gitignore  main.py  pyproject.toml  temp.py
.github/workflows/: ci.yml
app/apis/v1/: meeting_router.py
